[tool.poetry]
name = "dsa-python"
version = "0.1.0"
description = ""
authors = ["will-ing <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.5.3"
pytest-watch = "^4.2.0"
autopep8 = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
