[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["will-ing <willkoger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
pytest-watch = "^4.2.0"
pylint = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
autopep8 = "^1.5.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
